table top border fixed on mobile

--- a/src/app/features/bugs/content/content.component.scss
+++ b/src/app/features/bugs/content/content.component.scss
@@ -13,7 +13,7 @@ table tr:last-child td:last-child {
   border-top: hidden;
   border-radius: 10px;
   
-
+  
   tr {
     th {
       background-color: #36304a;
@@ -22,6 +22,7 @@ table tr:last-child td:last-child {
       border-bottom: none;
       cursor: pointer;
       user-select: none;
+      border-top: none;
 
       &:first-child{
         border-top-left-radius: 10px;
